--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* src/App.css */
 .suggestions-dropdown {
     color: black;
 }
@@ -10,4 +9,13 @@
 
 .suggestions-dropdown li:hover {
     background-color: #f0f0f0;
+}
+
+.glassCard {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
